update: updated the content in the content folder, README, the vocab, boxes config and the practice pack; updated wording in some files

--- a/content/boxes-config.json
+++ b/content/boxes-config.json
@@ -4,9 +4,9 @@
       "id": "likes",
       "name": "Likes and Dislikes",
       "goal": "Talk about what you like and don't like.",
-      "cups": [
+      "boxes": [
         {
-          "cupType": 1,
+          "boxType": 1,
           "name": "Statement (I like X)",
           "slot": "nounsLikes",
           "slot": "nounsLikes",
@@ -15,7 +15,7 @@
           "templateEn": "I like {e}."
         },
         {
-          "cupType": 2,
+          "boxType": 2,
           "name": "Yes/No question (Do you like X?)",
           "slot": "nounsLikes",
           "templateJa": "{j}が好きですか。",
@@ -23,7 +23,7 @@
           "templateEn": "Do you like {e}?"
         },
         {
-          "cupType": 3,
+          "boxType": 3,
           "name": "Open question (What do you like?)",
           "fixed": true,
           "templateJa": "何が好きですか。",
@@ -36,9 +36,9 @@
       "id": "study",
       "name": "Studying and Work",
       "goal": "Talk about what you study or do for work.",
-      "cups": [
+      "boxes": [
         {
-          "cupType": 1,
+          "boxType": 1,
           "name": "Statement (I am studying X)",
           "slot": "nounsStudy",
           "templateJa": "{j}を勉強しています。",
@@ -46,7 +46,7 @@
           "templateEn": "I am studying {e}."
         },
         {
-          "cupType": 2,
+          "boxType": 2,
           "name": "Yes/No question (Are you studying X?)",
           "slot": "nounsStudy",
           "templateJa": "{j}を勉強していますか。",
@@ -54,7 +54,7 @@
           "templateEn": "Are you studying {e}?"
         },
         {
-          "cupType": 3,
+          "boxType": 3,
           "name": "Open question (What are you studying?)",
           "fixed": true,
           "templateJa": "何を勉強していますか。",
@@ -62,7 +62,7 @@
           "templateEn": "What are you studying?"
         },
         {
-          "cupType": 1,
+          "boxType": 1,
           "name": "Statement (My job is X)",
           "slot": "jobs",
           "templateJa": "仕事は{j}です。",
@@ -75,9 +75,9 @@
       "id": "routine",
       "name": "Daily Routine and Time",
       "goal": "Talk about what you do and when.",
-      "cups": [
+      "boxes": [
         {
-          "cupType": 1,
+          "boxType": 1,
           "name": "Statement (I [verb] at [time])",
           "slot": "routinePairs",
           "templateJa": "{timeJ}に{verbMasu}。",
@@ -85,7 +85,7 @@
           "templateEn": "I {verbE} at {timeE}."
         },
         {
-          "cupType": 2,
+          "boxType": 2,
           "name": "Yes/No question (Do you [verb] at [time]?)",
           "slot": "routinePairs",
           "templateJa": "{timeJ}に{verbMasu}か。",
@@ -93,7 +93,7 @@
           "templateEn": "Do you {verbE} at {timeE}?"
         },
         {
-          "cupType": 3,
+          "boxType": 3,
           "name": "Open question (When do you get up? / What do you do in the morning?)",
           "fixed": true,
           "templateJa": "いつ起きますか。",
@@ -106,9 +106,9 @@
       "id": "wants",
       "name": "Wants and Plans",
       "goal": "Say what you want to do or plan to do.",
-      "cups": [
+      "boxes": [
         {
-          "cupType": 1,
+          "boxType": 1,
           "name": "Statement (I want to go to [place])",
           "slot": "places",
           "templateJa": "{j}に行きたいです。",
@@ -116,7 +116,7 @@
           "templateEn": "I want to go to {e}."
         },
         {
-          "cupType": 2,
+          "boxType": 2,
           "name": "Yes/No question (Do you want to go to [place]?)",
           "slot": "places",
           "templateJa": "{j}に行きたいですか。",
@@ -124,7 +124,7 @@
           "templateEn": "Do you want to go to {e}?"
         },
         {
-          "cupType": 3,
+          "boxType": 3,
           "name": "Open question (Why do you want to go to Japan?)",
           "fixed": true,
           "templateJa": "なぜ日本に行きたいですか。",
@@ -137,9 +137,9 @@
       "id": "because",
       "name": "Reasons (Because)",
       "goal": "Answer why with からです.",
-      "cups": [
+      "boxes": [
         {
-          "cupType": 1,
+          "boxType": 1,
           "name": "Answer (Because...)",
           "slot": "nounsLikes",
           "templateJa": "{j}が好きだからです。",
@@ -147,7 +147,7 @@
           "templateEn": "Because I like {e}."
         },
         {
-          "cupType": 3,
+          "boxType": 3,
           "name": "Open question (Why do you like X?)",
           "slot": "nounsLikes",
           "templateJa": "{j}はなぜ好きですか。",
